Ability to run tests over java 16
Add first set of options to be able to run tests under java [16, ).
Disable licensing plugin for such runs since its failing on its current state.